Replace wrapper class with container class from Bootstrap. Bootstrap's container is responsive to the media viewport change better than the original orderedlist/minimal CSS. Change the main div from fixed width float right to auto width no positioning so it can take advantage of the extra spaces provided by the container class.

--- a/assets/themes/minimal/_less/code.less
+++ b/assets/themes/minimal/_less/code.less
@@ -61,6 +61,13 @@ pre {
   }
 }
 
+@media print, screen and (max-width: @screen-xs-max) {
+  pre,
+  code {
+    word-wrap: normal;
+  }
+}
+
 // Enable scrollable blocks of code
 .pre-scrollable {
   max-height: @pre-scrollable-max-height;
