--- a/assets/themes/minimal/_less/main.less
+++ b/assets/themes/minimal/_less/main.less
@@ -2,13 +2,11 @@
 
 @import "bootstrap.less";
 
-.wrapper {
-  width: 860px;
-  margin: 0 auto;
-}
+@side-width: 270px;
+@side-gutter: 90px;
 
 header {
-  width: 270px;
+  width: @side-width;
   float: left;
   position: fixed;
 
@@ -30,7 +28,7 @@ header {
     border-radius: 5px;
     border: 1px solid #d2d2d2;
     box-shadow: inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-    width: 270px;
+    width: @side-width;
 
     li {
       width: 89px;
@@ -96,37 +94,39 @@ header {
 }
 
 main {
-  width: 500px;
-  float: right;
-  padding-bottom: 50px;
+  padding-left: (@side-width + @side-gutter);
 }
 
 footer {
-  width: 270px;
+  width: @side-width;
   float: left;
   position: fixed;
-  bottom: 50px;
+  bottom: @body-padding;
 
   p {
-    margin-bottom: 10px;
+    margin-bottom: (@line-height-computed / 2);
+  }
+
+  small p {
+    margin-bottom: 0;
   }
 }
 
-@media print, screen and (max-width: 960px) {
-  
-  .wrapper {
+@media print, screen and (max-width: @screen-sm-max) {
+  .container {
     width: auto;
     margin: 0;
   }
-  
-  header, main, footer {
+
+  header,
+  footer {
     float: none;
     position: static;
     width: auto;
   }
-  
+
   header {
-    padding-right: 320px;
+    padding-right: (@side-width + @side-gutter);
 
     a small {
       display: inline;
@@ -134,52 +134,34 @@ footer {
 
     ul {
       position: absolute;
-      right: 50px;
-      top: 50px;
+      right: @body-padding;
+      top: @body-padding;
     }
   }
   
   main {
     border: 1px solid @pre-border-color;
     border-width: 1px 0;
-    padding: 20px 0;
-    margin: 0 0 20px;
+    padding-top: @line-height-computed;
+    padding-left: 0;
+    padding-bottom: @line-height-computed;
+    margin-bottom: @line-height-computed;
   }
 }
 
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap: break-word;
-  }
-  
+@media print, screen and (max-width: @screen-xs-max) {
   header {
     padding: 0;
 
-    ul, p.view {
+    ul {
       position: static;
     }
   }
-  
-  pre, code {
-    word-wrap: normal;
-  }
 }
 
-@media print, screen and (max-width: 480px) {
-  body {
-    padding: 15px;
-  }
-  
+@media print, screen and (max-width: (@screen-xs-min - 1)) {
   header ul {
     display: none;
-  }
-}
-
-@media print {
-  body {
-    padding: 0.4in;
-    font-size: 12pt;
-    color: #444;
   }
 }
 
@@ -189,6 +171,13 @@ footer {
   margin-left: -50px;
   border-right: 1px solid @pre-border-color;
   .box-sizing(content-box);
+
+  @media print, screen and (max-width: (@screen-xs-min - 1)) {
+    float: right;
+    margin-left: 0;
+    border-right: none;
+    border-left: 1px solid @pre-border-color;
+  }
 
   .date {
     text-align: center;
