--- a/assets/themes/minimal/_less/variables.less
+++ b/assets/themes/minimal/_less/variables.less
@@ -28,6 +28,8 @@
 @body-bg:               #fff;
 //** Global text color on `<body>`.
 @text-color:            @gray-light;
+//
+@body-padding:          50px;
 
 //** Global textual link color.
 @link-color:            @brand-primary;
@@ -305,7 +307,7 @@
 //** Number of columns in the grid.
 @grid-columns:              12;
 //** Padding between columns. Gets divided in half for the left and right.
-@grid-gutter-width:         30px;
+@grid-gutter-width:         0px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
 @grid-float-breakpoint:     @screen-sm-min;
